--- a/src/assets/outerform.scss
+++ b/src/assets/outerform.scss
@@ -118,8 +118,8 @@
   // background: $white;
   //  background: #f3e5bb !important; // border-radius: 10px;
   border: none;
-  font-size: 12px;
-  font-weight: 600;
+  font-size: 10px;
+  //font-weight: 600;
   color: $grey;
   height: calc(2em + 0.75rem + 2px);
   border-bottom: 1px solid $primary;
